# cmake_and_google_test_boiler_plate

./: CMakeLists.txt  README.md
Chopper/: CMakeLists.txt
Chopper/include/Chopper/: vector.hpp
Chopper/src/: vector.cpp
tests/: CMakeLists.txt  __test__.cpp
